--- a/angular/jasmine-standalone-5.1.2/SpecRunner.html
+++ b/angular/jasmine-standalone-5.1.2/SpecRunner.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v5.1.2</title>
@@ -14,15 +15,20 @@
   <script src="lib/jasmine-5.1.2/boot1.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Soma.js"></script>
+  <!-- <script src="src/Soma.js"></script> -->
+  <script src="src/calculadora.js"></script>
+  <script src="src/maioridade.js"></script>
 
-  <!-- include spec files here... -->
+  <!-- include spec files here... 
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/SomaSpec.js"></script>
+  <script src="spec/SomaSpec.js"></script> -->
+  <script src="spec/calculadora.spec.js"></script>
+  <script src="spec/maioridade.spec.js"></script>
 
 </head>
 
 <body>
 </body>
+
 </html>
-Lucas Carvalho Simionato (Primária)	Tutor
+Lucas Carvalho Simionato (Primária) Tutor
